remove extra code